<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.gifplayer.GifPlayerFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/toolbar_text_size" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/category_mode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/random_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="Random"/>
        <CheckBox
            android:id="@+id/random_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/random_text"
            android:checked="true"/>

        <TextView
            android:id="@+id/latest_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="Latest"/>
        <CheckBox
            android:id="@+id/latest_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/latest_text"/>

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_gallery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="horizontal"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.8"
        android:visibility="gone"
        tools:visibility="gone" />

    <RelativeLayout
        android:id="@+id/control_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        tools:visibility="visible">

        <Space
            android:id="@+id/center_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/gif_player_fab_margin"
            android:layout_marginStart="@dimen/gif_player_fab_margin"
            android:layout_marginTop="@dimen/gif_player_fab_margin"
            android:layout_marginEnd="@dimen/gif_player_fab_margin"
            android:layout_marginBottom="@dimen/gif_player_fab_margin"
            android:layout_toStartOf="@id/center_space"
            android:contentDescription="@string/gallery_button_previous"
            android:src="@drawable/ic_baseline_arrow_back"
            app:backgroundTint="@color/white"
            app:borderWidth="0dp"
            app:elevation="@dimen/gif_player_fab_elevation"
            app:tint="@null"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/gif_player_fab_margin"
            android:layout_toEndOf="@id/center_space"
            android:contentDescription="@string/gallery_button_next"
            android:src="@drawable/ic_baseline_arrow_forward"
            app:backgroundTint="@color/white"
            app:borderWidth="0dp"
            app:elevation="18dp"
            app:tint="@null" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_layout_network_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_cloud" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/gallery_connection_error_message" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/gallery_button_retry" />
    </LinearLayout>

</LinearLayout>